<resources>
    <string name="app_name">Bachelor-App</string>
    <string name="welcome">Welcome!</string>
    <string name="credentials">Enter Credentials:</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="repeat_password">Repeat Password:</string>
    <string name="login">Log in</string>
    <string name="login_guest">Log in as guest</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="connect">Connect To Watch</string>
    <string name="song">Currently playing:</string>
</resources>